--- a/app/src/main/res/layout/item_class.xml
+++ b/app/src/main/res/layout/item_class.xml
@@ -72,8 +72,20 @@
                 android:padding="@dimen/d_10"
                 android:text="TDNDZ123"
                 android:textColor="@color/colorBlack"
-                android:textSize="@dimen/d_16"
+                android:textSize="@dimen/d_14"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/iv_edit_class"
+                android:layout_width="@dimen/d_30"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite"
+                android:gravity="center"
+                android:src="@drawable/ic_pen"
+                android:text="ghi chú"
+                android:textSize="@dimen/d_16"
+                android:tint="@color/colortvLogo" />
+
 
         </LinearLayout>
 
