--- a/app/src/main/res/layout/dialog_m005_change_timetable.xml
+++ b/app/src/main/res/layout/dialog_m005_change_timetable.xml
@@ -3,7 +3,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@color/colortvLogo1"
+    android:background="@color/colorGreenAlpha"
     android:orientation="vertical"
     android:padding="@dimen/d_16">
 
@@ -31,6 +31,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:maxLines="1"
             android:id="@+id/edt_day_dialog_change_tb005"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -59,7 +60,9 @@
             android:textSize="@dimen/d_20"
             android:textStyle="bold" />
 
+
         <EditText
+            android:maxLines="1"
             android:id="@+id/edt_time_dialog_change_tb005"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -89,6 +92,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:maxLines="1"
             android:id="@+id/edt_detail_dialog_change_tb005"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -118,6 +122,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:maxLines="1"
             android:id="@+id/edt_coach_dialog_change_tb005"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -147,6 +152,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:maxLines="1"
             android:id="@+id/edt_note_dialog_change_tb005"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
