--- a/app/src/main/res/layout/dialog_more_class.xml
+++ b/app/src/main/res/layout/dialog_more_class.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:background="@color/colortvLogo1"
+        android:background="@color/colorGreenAlpha"
         android:orientation="vertical"
         android:padding="@dimen/d_16">
 
@@ -38,6 +38,7 @@
 
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_className"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -60,6 +61,7 @@
             android:background="@color/colorWhite">
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_classCode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -83,6 +85,7 @@
 
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_coach"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -105,6 +108,7 @@
             android:background="@color/colorWhite">
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -128,6 +132,7 @@
 
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_duration"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -150,6 +155,7 @@
             android:background="@color/colorWhite">
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_modul"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -173,6 +179,7 @@
 
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_supporter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
