--- a/app/src/main/res/layout/dialog_more_coach.xml
+++ b/app/src/main/res/layout/dialog_more_coach.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:background="@color/colortvLogo1"
+        android:background="@color/colorGreenAlpha"
         android:orientation="vertical"
         android:padding="@dimen/d_16">
 
@@ -39,7 +39,7 @@
 
 
             <EditText
-
+                android:maxLines="1"
                 android:id="@+id/edt_chucvu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -63,6 +63,7 @@
             android:background="@color/colorWhite">
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_more_coach"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -85,6 +86,7 @@
 
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_company"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -106,6 +108,7 @@
             android:background="@color/colorWhite">
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_phonenumber"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -128,6 +131,7 @@
             android:background="@color/colorWhite">
 
             <EditText
+                android:maxLines="1"
                 android:id="@+id/edt_state"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
