--- a/app/src/main/res/layout/item_class_006.xml
+++ b/app/src/main/res/layout/item_class_006.xml
@@ -11,6 +11,7 @@
         android:id="@+id/ln_item_class"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="horizontal"
         android:background="@drawable/bg_item_day">
 
@@ -18,7 +19,6 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/d_10"
 
             android:orientation="vertical"
             android:padding="0.1dp">
@@ -105,7 +105,8 @@
         </LinearLayout>
         <ImageView
             android:layout_width="@dimen/d_50"
-            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_height="@dimen/d_50"
             android:src="@drawable/ic_right"/>
 
     </LinearLayout>
