--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/ln_item_time"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_weight="3"
