--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="colorVioletAlpha">#F5F3FD</color>
     <color name="colorRedAlpha">#FFF0F0</color>
     <color name="colorBlue">#4E62ED</color>
-    <color name="colorGreen">#8BFF7F</color>
+    <color name="colorGreen">#45BC39</color>
 </resources>
